--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.1",
     "auth0-js": "^8.8.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "firebase": "^4.2.0",
     "font-awesome": "^4.7.0",
     "ng2-pagination": "^2.0.2",
     "rxjs": "^5.1.0",
